--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,3 @@
 h1. extended_nested_set
 
-Improves working with sibling and moving nodes for awesome_nested_set.
+Few methods extending acts_as_nested_set (awesome_nested_set).
